force-app/main/default/objects/Program_Sales_Restriction__c/Program_Sales_Restriction__c.object-meta.xml
<CustomObject>
    <description>Object related to Dealers that will store information about Sales Quantity Limits by Month by Program. [PER-5267]</description>
    <label>Program Sales Restriction</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Program Sales Restriction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Sales Restrictions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>