force-app/main/default/objects/Program_Sales_Restriction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Dealer</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Sales Restrictions</relationshipLabel>
    <relationshipName>Program_Sales_Restrictions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>