force-app/main/default/objects/Program_Sales_Restriction__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <description>Limit of completed sales the dealer can do per calendar month</description>
    <inlineHelpText>Limit of completed sales the dealer can do per calendar month</inlineHelpText>
    <label>Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>