force-app/main/default/objects/Program_Sales_Restriction__c/fields/Limit_Reached__c.field-meta.xml
<CustomField>
    <fullName>Limit_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limit Reached</label>
    <type>Checkbox</type>
</CustomField>