force-app/main/default/objects/Program_Sales_Restriction__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Chuzo_Programs</valueSetName>
    </valueSet>
</CustomField>