force-app/main/default/objects/Program_Sales_Restriction__c/validationRules/Limit_must_be_greater_than_or_equal_to_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_must_be_greater_than_or_equal_to_1</fullName>
    <active>true</active>
    <errorConditionFormula>Limit__c  &lt; 1</errorConditionFormula>
    <errorMessage>Limit must be greater than or equal to 1</errorMessage>
</ValidationRule>